# procman

./: Cargo.toml  flake.nix  rust-toolchain.toml
lib/procmanlib/: Cargo.toml
lib/procmanlib/src/: config.rs  lib.rs  program_name.rs
lib/procmanlib/src/config/: config_file.rs  format.rs  parser.rs
lib/procmanlib/src/config/examples/: procman.json  procman.toml  procman.yaml
