[workspace]
members = ["bin/*", "lib/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matthew Planchard <msplanchard@gmail.com>"]
homepage = "https://github.com/mplanchard/procman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.75"
clap = "4.4.7"
directories = "5.0.1"
itertools = "0.11.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.50"
toml = "0.8.6"
